--- a/external-class-2.html
+++ b/external-class-2.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,600;1,300;1,700;1,800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="classtwo-1.css">
+<link rel="stylesheet" href="external-class-2.css">
 </head>
 <body>
     
