--- a/css-combinator.html
+++ b/css-combinator.html
@@ -22,7 +22,7 @@
                 text-align: justify;
                 text-decoration: underline;
             }
-            .Bhai h1 {
+            .dada h1 {
                 font-style: oblique;
                 color: darkorange;
             }
