--- a/css-combinator2.html
+++ b/css-combinator2.html
@@ -29,18 +29,28 @@
             font-weight: lighter;
             text-decoration: underline;
         }
+        .bon > h2 {
+            text-decoration: underline;
+        }
+        .bhai > h3 {
+            text-decoration: underline;
+        }
         .dada p {
             color: darkgoldenrod;
             font-style: oblique;
-            font-size: xx-large;
+            font-size: large;
         }
-
+        header {
+            color: rgb(46, 97, 138);
+            font-size: 50px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
+    <header>This is our familly details.</header>
     <section class="dada">
         <div class="baba">
-            <p>This is our familly details.</p>
             <h1 class="bhai">This is Num-2.</h1>
             <p>His name is Abdur Razzak. He is 32 years old. He is married. He work our own business.</p>
             <h1 class="bhai">This is Num-3.</h1>
