--- a/css-link.html
+++ b/css-link.html
@@ -42,6 +42,13 @@
             background-color: darkorchid;
             color: burlywood;
         }
+        .text {
+            padding: 10px 20px;
+            font-family: monospace;
+            font-size: xx-large;
+            font-style: italic;
+            font-weight: 800;
+        }
         .text:visited {
             color:firebrick;
         }
@@ -79,7 +86,7 @@
     <a href="https://www.br.teletalk.com.bd" class="br" target="blank">Bangladesh Railways</a>
     <a href="#" class="submit">Submit</a>
     <a href="#" class="com">Completed</a>
-    <a href="" class="text">text</a>
+    <a href="" class="text">Text</a>
 </br>
     <a href="#" class="button">Button</a>
 </body>
