--- a/css-link.html
+++ b/css-link.html
@@ -39,7 +39,7 @@
         }
         a.com:hover {
             cursor: wait;
-            background-color: darkorchid;
+            background-color: rgb(80, 8, 56);
             color: burlywood;
         }
         .text {
