--- a/css-table.html
+++ b/css-table.html
@@ -41,6 +41,7 @@
         tbody td:last-child {
             text-align: center;
             color: #b8c4d2;
+            font-weight: bold;
         }
         button {
             background-color: #4b908f;
@@ -67,7 +68,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Atik Faisal</td>
+                    <td>Atik</td>
                     <td>siamhasan.faisal111@gmail.com</td>
                     <td>01793666462</td>
                     <td><button type="submit">Select</button></td>
@@ -79,7 +80,7 @@
                     <td><button type="submit">Select</button></td>
                 </tr>
                 <tr>
-                    <td>Farhad</td>
+                    <td>Faisal</td>
                     <td>atik.faisal111684@gmail.com</td>
                     <td>01724900301</td>
                     <td><button type="submit">Select</button></td>
