--- a/my-page.html
+++ b/my-page.html
@@ -78,6 +78,9 @@
         ul li:hover a {
             padding-left: 50px;
         }
+        .sidebar p {
+            display: flex;
+        }
     </style>
 </head>
 <body>
@@ -117,6 +120,7 @@
             <li><a href="#"><i class="fa-sliders-h"></i>Services</a></li>
             <li><a href="#"><i class="far fa-envelope"></i>Contact</a></li>
         </ul>
+        <p id="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi laudantium accusantium ut magnam? Eaque, atque eos nam iure doloribus aspernatur corrupti aliquid amet reprehenderit, dolor distinctio vitae eveniet ex assumenda?</p>
     </div>
 </body>
 </html>
