--- a/animation-one.html
+++ b/animation-one.html
@@ -10,7 +10,7 @@
             box-sizing: border-box;
         }
         .skill-container {
-            background-color: gray;
+            background-color: rgb(77, 59, 59);
             padding: 20px;
             width: 600px;
         }
@@ -20,6 +20,7 @@
             font-weight: bolder;
             text-transform: uppercase;
             position: relative;
+            color: white;
         }
         .skill-container li::before {
             content: '';
