--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
         </div>
         <div class="nav-menu col-6">
             <a href="#">Home</a>
-            <a href="#">About Me</a>
+            <a href="#about-me-id">About Me</a>
             <a href="#">skill</a>
             <a href="#">Contact Me</a>
         </div>
@@ -32,6 +32,30 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas culpa assumenda eos possimus in cupiditate! Perspiciatis.</p>
         </div>
         <img class="bottom-icon" src="https://i.pinimg.com/originals/06/c4/f7/06c4f70ec5931e2342e703e8a3f0a253.png" alt="bottom weather icon">
+    </div>
+
+
+    <div class="about-me" id="about-me-id">
+        <h2>About Me</h2>
+        <hr class="dotted-hr">
+        <div class="aboutme-img col-6">
+            <img src="https://image.shutterstock.com/image-vector/dots-letter-c-logo-design-260nw-551769190.jpg" alt="">
+        </div>
+        <div class="aboutme-desc col-6">
+            <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas, ullam?</P>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, numquam.</p>
+            <hr class="aboutme-hr">
+            <p>Name: Atik Faisal</p>
+            <hr class="aboutme-hr">
+            <p>Address: Chapainawabganj</p>
+            <hr class="aboutme-hr">
+            <p>Email: atikfaisal11684@gmail.com</p>
+            <hr class="aboutme-hr">
+            <p>Phone: 01739666462</p>
+            <hr class="aboutme-hr">
+            <p>Website: https://www.w3schools.com/</p>
+            <hr class="aboutme-hr">
+        </div>
     </div>
 </body>
 </html>
